[package]
name = "giza"
version = "0.0.0"
license = "MIT OR Apache-2.0"
authors = ["Mayank Verma <errmayank@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
anyhow = { version = "1.0" }
objc2 = { version = "0.6" }
objc2-app-kit = { version = "0.3", features = ["objc2-quartz-core"] }
objc2-quartz-core = { version = "0.3" }
winit = { version = "0.30" }
